--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,11 @@ html {
     line-height: 1.4;
 }
 
+body{
+	margin:0;
+	padding:0;
+}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
