--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ body{
 	width:100%;
 	height:180px;
 	background:black;
+	z-index:1000;
 }
 
 #about_box{
@@ -47,6 +48,38 @@ body{
 	width:100%;
 	height:160px;
 	background:#c762fb;
+}
+
+.pics_box{
+	width:100%;
+	height:100%;
+}
+
+.case_description_box{
+	width:100%;
+	height:80px;
+	position:relative;
+	top:-80px;
+	overflow:hidden;
+	background:rgba(255,255,255,0.6);
+}
+
+.case_description_box h1{
+	font-size:1.4em;
+	margin-top:4px;
+	margin-bottom:4px;
+	font-weight:normal;
+}
+
+.case_description_box h4{
+	font-size:1em;
+	font-weight:lighter;
+	margin-top:2px;
+	margin-bottom:2px;
+}
+
+.detail_box{
+	display:none;
 }
 
 ::-moz-selection {
