--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ body{
 	margin:0;
 	padding:0;
 	background:black;
+	font-size:14px;
 }
 
 /*
@@ -32,15 +33,25 @@ body{
 	position:fixed;
 	top:0;
 	width:100%;
-	height:180px;
+	height:213px;
 	background:black;
 	z-index:1000;
+	overflow:hidden;
+}
+
+#navbar>img{
+	position:absolute;
 	-webkit-transform: translate3d(0px,0px,0px);
+}
+
+#navbar>div{
+	position:absolute;
+	top:10px;
 }
 
 #about_box{
 	width:100%;
-	height:180px;
+	height:213px;
 	background:#111111;
 	visibility:hidden;
 }
@@ -83,17 +94,31 @@ body{
 .detail_box{
 	display:none;
 	padding:0 16px 10px 16px;
+	background:#b8b0cd;
+	position:relative;
+	color:#05115a;
+}
+
+.detail_box .shadow{
+	width:100%;
+	height:44px;
+	background:-webkit-linear-gradient(top, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.2) 12%,rgba(0,0,0,0) 32%,rgba(0,0,0,0) 100%);
+	background:linear-gradient(to bottom, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.2) 12%,rgba(0,0,0,0) 32%,rgba(0,0,0,0) 100%);
+	position:absolute;
+	left:0;
+	top:0;
 }
 
 .detail_box a.close_button{
 	display:block;
 	width:100%;
-	height:30px;
+	height:44px;
 	text-align:center;
 	font-size:1.4em;
-	color:aqua;
+	background:url('../img/btnHide.png') no-repeat center center;
+	
+	background-size:36px 36px;
 	text-decoration:none;
-	padding-top:14px;
 }
 
 .case_box>div.pics_box{
