--- a/css/main.css
+++ b/css/main.css
@@ -58,21 +58,22 @@ body{
 
 .case_box{
 	width:100%;
-	height:178px;
+	height:auto;
 	background:#c762fb;
 	overflow:hidden;
+	position:relative;
 }
 
 .pics_box{
 	width:100%;
-	height:100%;
+	height:auto;
 }
 
 .case_description_box{
 	width:100%;
 	height:80px;
-	position:relative;
-	top:-80px;
+	position:absolute;
+	bottom:0px;
 	overflow:hidden;
 	background:rgba(255,255,255,0.8);
 }
@@ -84,7 +85,7 @@ body{
 	font-weight:normal;
 }
 
-.case_description_box h4{
+.case_description_box p, .case_description_box h4{
 	font-size:1em;
 	font-weight:lighter;
 	margin-top:2px;
