--- a/css/main.css
+++ b/css/main.css
@@ -56,10 +56,63 @@ body{
 	visibility:hidden;
 }
 
+#about_content{
+	width:100%;
+	z-index:1001;
+}
+
+#about_content>#links{
+	height:44px;
+	overflow:hidden;
+	
+}
+
+#about_content>#links>a{
+	display:block;
+	width:44px;
+	height:44px;
+	float:left;
+}
+
+#about_content h1{
+	margin-top:0;
+	margin-left:10px;
+}
+
+#about_content>p{
+	margin:2px 10px;
+	padding:0;
+}
+
+#about_content>#links>a#cv{
+	background:url("../../images/btnCV.png") no-repeat center center;
+	background-size:36px 36px;
+}
+
+#about_content>#links>a#mail{
+	background:url("../../images/btnMail.png") no-repeat center center;
+	background-size:36px 36px;
+}
+
+#about_content>#links>a#twitter{
+	background:url("../../images/btnTwitter.png") no-repeat center center;
+	background-size:36px 36px;
+}
+
+#about_content>#links>a#linkedin{
+	background:url("../../images/btnLinkedin.png") no-repeat center center;
+	background-size:36px 36px;
+}
+
+#about_content>#links>a#blog{
+	background:url("../../images/btnBlogger.png") no-repeat center center;
+	background-size:36px 36px;
+}
+
 .case_box{
 	width:100%;
 	height:auto;
-	background:#c762fb;
+	background:#888888;
 	overflow:hidden;
 	position:relative;
 }
@@ -75,7 +128,11 @@ body{
 	position:absolute;
 	bottom:0px;
 	overflow:hidden;
-	background:rgba(255,255,255,0.8);
+	background:rgba(255,255,255,0.6);
+}
+
+.case_description_box a{
+	color:#36a9e1;
 }
 
 .case_description_box h1{
@@ -83,6 +140,18 @@ body{
 	margin-top:4px;
 	margin-bottom:4px;
 	font-weight:normal;
+}
+
+.case_description_box>div.case_summary{
+	top:30px;
+	position:absolute;
+	height:20px;
+	overflow:hidden;
+}
+
+.case_description_box>div.case_title{
+	top:0px;
+	position:absolute;
 }
 
 .case_description_box p, .case_description_box h4{
