--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body{
 	padding:0;
 	background:black;
 	font-size:14px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 /*
@@ -77,6 +78,7 @@ body{
 #about_content h1{
 	margin-top:0;
 	margin-left:10px;
+	font-family: 'Lobster Two', cursive;
 }
 
 #about_content>p{
@@ -140,6 +142,9 @@ body{
 	margin-top:4px;
 	margin-bottom:4px;
 	font-weight:normal;
+	font-family: 'Lobster Two', cursive;
+	margin-left:10px;
+	margin-right:10px;
 }
 
 .case_description_box>div.case_summary{
@@ -147,6 +152,8 @@ body{
 	position:absolute;
 	height:20px;
 	overflow:hidden;
+	margin-left:10px;
+	margin-right:10px;
 }
 
 .case_description_box>div.case_title{
@@ -189,6 +196,11 @@ body{
 	
 	background-size:36px 36px;
 	text-decoration:none;
+}
+
+.detail_box h1.detail_title{
+	font-family: 'Lobster Two', cursive;
+	margin-top:0;
 }
 
 .case_box>div.pics_box{
