--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,6 @@ body{
 	-webkit-transform: translate3d(0px,0px,0px);
 }
 
-#navbar>div{
-	position:absolute;
-	top:10px;
-}
-
 #about_box{
 	width:100%;
 	height:213px;
@@ -60,6 +55,8 @@ body{
 #about_content{
 	width:100%;
 	z-index:1001;
+	position:absolute;
+	top:0;
 }
 
 #about_content>#links{
@@ -76,8 +73,7 @@ body{
 }
 
 #about_content h1{
-	margin-top:0;
-	margin-left:10px;
+	margin:4px 10px;
 	font-family: 'Lobster Two', cursive;
 }
 
@@ -219,7 +215,7 @@ body{
 	-webkit-transform: translate3d(0px,0px,0px); 
 }
 
-.case_box>div.pics_box>img{
+.case_box img.case_pic{
 	width:320px;
 	height:auto;
 	margin:0;
